[package]
name = "ilattice3-wfc"
version = "0.1.0"
authors = ["Duncan <bonsairobo@gmail.com>"]
edition = "2018"

[lib]
name = "ilattice3_wfc"
path = "src/lib.rs"

[profile.release]
debug = true
opt-level = 1

[dependencies]
ctrlc = "*"
dot_vox = "*"
env_logger = "*"
hibitset = "*"
ilattice3 = { git = "https://github.com/bonsairobo/ilattice3" }
image = "*"
log = "*"
paw = "*"
rand = "*"
rand_distr = "*"
structopt = { version = "*", features = ["paw"] }
