[package]
name = "ilattice3-wfc"
version = "0.1.0"
authors = ["Duncan <bonsairobo@gmail.com>"]
edition = "2018"

[lib]
name = "ilattice3_wfc"
path = "src/lib.rs"

# [profile.release]
# debug = true
# opt-level = 1

[dependencies]
ctrlc = "3.1.5"
dot_vox = "4.1.0"
flexi_logger = "0.15.7"
hibitset = "0.6.3"
ilattice3 = { git = "https://github.com/bonsairobo/ilattice3", features = ["img", "vox"] }
image = "0.23.6"
indicatif = "0.15.0"
log = "0.4.8"
paw = "1.0.0"
rand = { version = "0.7.3", features = ["small_rng"] }
rand_distr = "0.2.2"
structopt = { version = "0.3.15", features = ["paw"] }
